# anchor

./: .cspell-anchor-dictionary.txt  .git-blame-ignore-revs  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bump-version.sh  rustfmt.toml  setup-tests.sh
.github/: pull_request_template.md
.github/actions/setup-surfpool/: action.yaml
.github/scripts/: check-solana-program-version.sh  publish-npmjs.sh
.github/workflows/: no-caching-tests.yaml  prepare-release.yaml  release-pr.yaml  release.yaml  reusable-tests.yaml  tests.yaml
avm/: Cargo.toml
avm/src/: lib.rs  main.rs
bench/: BINARY_SIZE.md  COMPUTE_UNITS.md  STACK_MEMORY.md
cli/: Cargo.toml
cli/cli-macros/: Cargo.toml
cli/cli-macros/src/: lib.rs
cli/npm-package/: README.md  package.json
cli/src/: abs_path.rs  account.rs  checks.rs  config.rs  dotnet_generator.rs  keygen.rs  legacy_idl.rs  lib.rs  main.rs  metadata.rs  program.rs  rust_template.rs
cli/src/client_generators/: dotnet.rs  mod.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/example/src/: blocking.rs  nonblocking.rs
client/src/: blocking.rs  cluster.rs  lib.rs  nonblocking.rs
docker/: Makefile
docs/app/: layout.config.tsx
docs/content/docs/: footguns.mdx  installation.mdx  meta.json
examples/tutorial/: package.json
examples/tutorial/basic-0/: package.json
examples/tutorial/basic-1/: package.json
examples/tutorial/basic-2/: package.json
examples/tutorial/basic-3/: package.json
examples/tutorial/basic-4/: package.json
examples/tutorial/basic-5/: package.json
idl/: Cargo.toml
idl/spec/: Cargo.toml
idl/spec/src/: lib.rs
idl/src/: build.rs  convert.rs  lib.rs
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/access-control/src/: lib.rs
lang/attribute/account/: Cargo.toml
lang/attribute/account/src/: id.rs  lazy.rs  lib.rs
lang/attribute/constant/: Cargo.toml
lang/attribute/constant/src/: lib.rs
lang/attribute/error/: Cargo.toml
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/attribute/program/src/: lib.rs
lang/attribute/program/src/declare_program/: common.rs  mod.rs
lang/attribute/program/src/declare_program/mods/: accounts.rs  client.rs  constants.rs  cpi.rs  error.rs  events.rs  internal.rs  mod.rs  parsers.rs  program.rs  types.rs
lang/derive/accounts/: Cargo.toml
lang/derive/accounts/src/: lib.rs
lang/derive/serde/: Cargo.toml
lang/derive/serde/src/: lazy.rs  lib.rs
lang/derive/space/: Cargo.toml
lang/derive/space/src/: lib.rs
lang/error/src/: lib.rs
lang/src/: account_meta.rs  bpf_upgradeable_state.rs  bpf_writer.rs  common.rs  context.rs  error.rs  idl.rs  lazy.rs  lib.rs  system_program.rs  vec.rs
lang/src/accounts/: account.rs  account_info.rs  account_loader.rs  boxed.rs  interface.rs  interface_account.rs  lazy_account.rs  migration.rs  option.rs  program.rs  signer.rs  system_account.rs  sysvar.rs  unchecked_account.rs
lang/syn/: Cargo.toml
lang/syn/src/: hash.rs  lib.rs
lang/tests/: generics_test.rs  macros.rs  primitive_space.rs  serialization.rs  space.rs
spl/: Cargo.toml
spl/src/: associated_token.rs  memo.rs  metadata.rs  mint.rs  stake.rs  token.rs  token_2022.rs  token_interface.rs
spl/src/token_2022_extensions/: cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  immutable_owner.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  mod.rs  non_transferable.rs  pausable.rs  permanent_delegate.rs  token_group.rs  token_metadata.rs  transfer_fee.rs  transfer_hook.rs
tests/anchor-cli-account/: package.json
tests/anchor-cli-idl/: .gitignore  package.json  test.sh
tests/anchor-cli-idl/tests/: idl.ts
tests/auction-house/: package.json
tests/bench/: README.md  bench.json  package.json
tests/bench/scripts/: utils.ts
tests/bench/tests/: binary-size.ts
tests/bpf-upgradeable-state/: package.json
tests/cashiers-check/: package.json
tests/cfo/: package.json
tests/chat/: package.json
tests/composite/: package.json
tests/cpi-returns/: Anchor.toml  package.json
tests/cpi-returns/programs/malicious/: Cargo.toml
tests/cpi-returns/programs/malicious/src/: lib.rs
tests/custom-coder/: package.json
tests/custom-discriminator/: Anchor.toml  package.json
tests/custom-program/: package.json
tests/declare-id/: package.json
tests/declare-program/: package.json
tests/declare-program/programs/declare-program/: Cargo.toml
tests/declare-program/programs/declare-program/src/: lib.rs
tests/declare-program/programs/declare-program/tests/: declare_program_test.rs  parsers.rs
tests/duplicate-mutable-accounts/: package.json
tests/errors/: Anchor.toml  package.json  test.sh
tests/escrow/: package.json
tests/events/: package.json
tests/floats/: package.json
tests/idl/: package.json
tests/idl/idls/: idl.json
tests/ido-pool/: package.json
tests/interface-account/: package.json
tests/lazy-account/: package.json
tests/lockup/: package.json
tests/misc/: package.json
tests/multiple-suites/: package.json
tests/multiple-suites-run-single/: package.json
tests/multisig/: package.json
tests/optional/: package.json
tests/pda-derivation/: package.json
tests/pyth/: package.json
tests/realloc/: package.json
tests/relations-derivation/: package.json
tests/safety-checks/: Anchor.toml
tests/solana-program-deps/: test.sh
tests/solana-program-deps/matching/programs/matching-solana-program/: Cargo.toml
tests/solana-program-deps/matching/programs/matching-solana-program/src/: lib.rs
tests/solana-program-deps/mismatched/programs/mismatched-solana-program/: Cargo.toml
tests/solana-program-deps/mismatched/programs/mismatched-solana-program/src/: lib.rs
tests/swap/: package.json
tests/system-accounts/: package.json
tests/sysvars/: package.json
tests/tictactoe/: package.json
tests/typescript/: package.json
tests/validator-clone/: package.json
tests/zero-copy/: package.json
ts/: build-packages.sh
(+162 files in other folders)
