[package]
name = "anchor-lang-idl"
version = "0.1.2"
publish = false
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/solana-foundation/anchor"
edition = "2021"
license = "Apache-2.0"
description = "Anchor framework IDL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
build = ["dep:regex", "dep:serde_json"]
convert = ["dep:heck", "dep:serde_json", "dep:sha2"]

[dependencies]
anchor-lang-idl-spec = { path = "./spec", version = "0.1.0" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

# `convert` feature only
heck = { version = "0.3", optional = true }

# `build` feature only
regex = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
