[package]
name = "anchor-cli-macros"
version.workspace = true
edition = "2024"
publish = true
repository =  "https://github.com/solana-foundation/anchor"
description = "Macros used internally by the Anchor CLI"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"
