[package]
name = "anchor-attribute-access-control"
version.workspace = true
publish = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/solana-foundation/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for instruction access control"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
