[package]
name = "anchor-attribute-account"
version.workspace = true
publish = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/solana-foundation/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for defining an account"
edition = "2021"

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
lazy-account = []
event-cpi = []

[dependencies]
anchor-syn = { path = "../../syn", version = "1.0.0-rc.3", features = ["hash"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
