[package]
name = "anchor-attribute-constant"
version.workspace = true
publish = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/solana-foundation/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for creating constant types"
edition = "2021"

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]

[dependencies]
anchor-syn = { path = "../../syn", version = "1.0.0-rc.3" }
quote = "1"
syn = { version = "1", features = ["full"] }
