[package]
name = "anchor-attribute-program"
version.workspace = true
publish = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/solana-foundation/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for defining a program"
edition = "2021"

[lib]
proc-macro = true

[lints.clippy]
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
unimplemented = "deny"
indexing-slicing = "deny"

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
legacy-idl = ["anchor-syn/legacy-idl"]

[dependencies]
anchor-lang-idl = { path = "../../../idl", version = "0.1.2", features = ["convert"] }
anchor-syn = { path = "../../syn", version = "1.0.0" }
anyhow = "1"
heck = "0.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
