[package]
name = "anchor-derive-accounts"
version.workspace = true
publish = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/solana-foundation/anchor"
license = "Apache-2.0"
description = "Anchor Derive macro for accounts"
edition = "2021"

[lib]
proc-macro = true

[features]
allow-missing-optionals = ["anchor-syn/allow-missing-optionals"]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
init-if-needed = ["anchor-syn/init-if-needed"]

[dependencies]
anchor-syn = { path = "../../syn", version = "1.0.0-rc.3" }
quote = "1"
syn = { version = "1", features = ["full"] }
