[package]
name = "anchor-derive-space"
version.workspace = true
publish = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/solana-foundation/anchor"
license = "Apache-2.0"
description = "Anchor Derive macro to automatically calculate the size of a structure or an enum"
edition = "2021"

[lib]
proc-macro = true

[lints.clippy]
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
unimplemented = "deny"
indexing-slicing = "deny"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
